--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>shapeonyou</title>
+    <title>Shape on you</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but shapeonyou doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but "Shape on you" doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
